# myshape-protocol

./: .gitignore  .vercelignore  CLAUDE.md  CPS0001.md  GRANT_PROPOSAL.md  LICENSE  PROTOCOL_LOG.md  README.md  RESEARCH_WHITEPAPER.md  ROADMAP.md  SDK_RELEASE_NOTE.md  instrumentation.ts  next.config.js  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  test-ignite.js  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
continuity-protocol/: README.md
continuity-protocol/conformance/: minimal-producer.test.ts
continuity-protocol/verifier-plugin/: index.ts  (+2 more)
cps-0001-onboarding/: 00-what-is-cps0001.md  01-understand-receipt.md  02-build-a-receipt.md  03-run-verifier.md  04-write-your-own-producer.md  START_HERE.md  checklist.md
docs/: Architecture.md  Protocol-Spec.md  genesis-100-recruitment.md  genesis-stability-audit-summary.md  genesis-stability-audit-v1.0.md  social-launch-copy-v1.md
public/: camera-test.html  llms-full.txt  llms.txt  matrix-status.json  matrix.html  test-new.txt
scripts/: brand-check.sh  demo_simulator.ts  https-dev-proxy.js  onboarding-check.ps1  onboarding-check.sh  package-lock.json  package.json  post-bluesky.mjs  post-farcaster.mjs  post-rn001-bluesky.mjs  post-telegram.mjs  post-x-thread.mjs  proxy-watchdog.ps1  test_wasm_load.ts  verify-calibration.ts  verify-phase-e3.ts
src/: global.d.ts  proxy.ts
wasm/: Cargo.toml
wasm/pkg/: myshape_wasm.js  myshape_wasm_bg.wasm
wasm/pkg-bundler/: myshape_wasm.d.ts  myshape_wasm_bg.js
wasm/src/: lib.rs
(+494 files in other folders)
