[package]
name = "myshape-wasm"
version = "0.1.0"
edition = "2021"
description = "MyShape Presence Protocol — WASM bindings for the core engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
myshape-engine = { path = "../engine" }
nalgebra = { version = "0.35" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }

[profile.release]
opt-level = "s"     # Optimize for size
lto = true
